--- a/composer.json
+++ b/composer.json
@@ -29,7 +29,7 @@
             "email": "egor@zyuskin.ru"
         },
         {
-            "name": "Igor Bbodnar",
+            "name": "Igor Bodnar",
             "email": "bodnar_i@mail.ru"
         }
     ]
