--- a/composer.json
+++ b/composer.json
@@ -8,15 +8,21 @@
     "require": {
         "php": ">=5.3",
         "symfony/options-resolver": "~2.3",
-        "psr/log": "~1.0"
+        "psr/log": "~1.0",
+        "symfony/http-foundation": "^2.7"
     },
     "require-dev": {
-        "phpunit/phpunit": "^4.7"
+        "phpunit/phpunit": "^4.7",
+        "monolog/monolog": "^1.13",
+        "symfony/filesystem": "^2.7"
     },
     "autoload": {
         "psr-4": {
             "AmaxLab\\GitWebHook\\": "src"
         }
+    },
+    "autoload-dev": {
+        "psr-4": { "AmaxLab\\GitWebHook\\Tests\\": "tests/" }
     },
     "extra": {
         "branch-alias": {
