--- a/composer.json
+++ b/composer.json
@@ -7,9 +7,9 @@
     "type": "library",
     "require": {
         "php": ">=5.3",
-        "symfony/options-resolver": "~2.3",
-        "psr/log": "~1.0",
-        "symfony/http-foundation": "^2.7"
+        "symfony/options-resolver": "^2.3",
+        "symfony/http-foundation": "^2.3",
+        "psr/log": "~1.0"
     },
     "require-dev": {
         "phpunit/phpunit": "^4.7",
