--- a/composer.json
+++ b/composer.json
@@ -9,6 +9,7 @@
         "php": ">=5.3",
         "symfony/options-resolver": "^2.3",
         "symfony/http-foundation": "^2.3",
+        "symfony/yaml": "^2.3",
         "psr/log": "~1.0"
     },
     "require-dev": {
